fixed alignment of dropbtn

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -54,6 +54,7 @@ header {
   display: none;
   cursor: pointer;
   padding:10px 0;
+  padding-top: 0;
  
 }
 
